--- a/imdb_scrape.Rmd
+++ b/imdb_scrape.Rmd
@@ -291,8 +291,9 @@ vote <- vot %>%
 ```
 
 
-``` {r final}
-# Combine df
-total <- cbind(titles, rating, vote, description, metadat, crew)
-write.xlsx(total, 'scraped_data.xlsx')
+``` {r final, eval = FALSE}
+# We are including this to show how we reached this point, but it should not be run
+# Combine df 
+# total <- cbind(titles, rating, vote, description, metadat, crew)
+# write.xlsx(total, 'scraped_data.xlsx')
 ```
